assets/css/main.css
/* ... */
@media (max-width: 576px) {
  .featured-section .featured-video {
    height: 70vh;
  }
  .featured-section .featured-articles-wrapper {
    height: auto;
  }
  .featured-section .featured-articles-wrapper .featured-article {
    width: 50%;
    height: 200px;
  }
}

@media (max-width: 475px) {
  .featured-section .featured-articles-wrapper .featured-article .featured-details {
    padding: 16px;
  }
  .featured-section .featured-articles-wrapper .featured-article .featured-details p {
    -webkit-line-clamp: 1;
  }
}

.hero-section {
  min-height: 820px;
  max-height: 1080px;
  max-width: 2160px;
  margin: 0 auto;
  height: calc(100% - 104px);
  padding: 0 88px;
  display: -ms-grid;
  display: grid;
  -ms-grid-columns: auto;
      grid-template-columns: auto;
  -ms-grid-rows: auto 225px;
      grid-template-rows: auto 225px;
}

@media (max-width: 1360px) {
  .hero-section {
    padding-right: 0;
    overflow: hidden;
  }
}

@media (max-width: 992px) {
  .hero-section {
    min-height: auto;
    height: auto;
    max-height: none;
    padding: 0 64px;
    padding-right: 64px;
    -ms-grid-rows: auto 250px;
        grid-template-rows: auto 250px;
  }
}

@media (max-width: 768px) {
  .hero-section {
    padding: 0 24px;
  }
}

@media (max-width: 576px) {
  .hero-section {
    padding: 0 16px;
  }
}

.upper-hero-grid {
  display: -ms-grid;
  display: grid;
  -ms-grid-columns: auto 740px;
      grid-template-columns: auto 740px;
  -ms-grid-rows: auto;
      grid-template-rows: auto;
}

.upper-hero-grid .hero-details {
  -ms-grid-column: 1;
      grid-column-start: 1;
  grid-column-end: 2;
  -ms-grid-row: 1;
      grid-row-start: 1;
  grid-row-end: 2;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  margin-right: 32px;
}

.upper-hero-grid .hero-details .heading-group {
  -ms-flex-item-align: center;
      -ms-grid-row-align: center;
      align-self: center;
  margin-top: 117px;
}

.upper-hero-grid .hero-details .heading-group span,
.upper-hero-grid .hero-details .heading-group h1,
.upper-hero-grid .hero-details .heading-group .lead,
.upper-hero-grid .hero-details .heading-group a {
  -webkit-animation: flyInFromBottomMin 600ms cubic-bezier(0.14, 0.62, 0.155, 1) both;
          animation: flyInFromBottomMin 600ms cubic-bezier(0.14, 0.62, 0.155, 1) both;
}

.upper-hero-grid .hero-details .heading-group h1 {
  -webkit-animation-delay: 100ms;
          animation-delay: 100ms;
}

.upper-hero-grid .hero-details .heading-group .lead {
  display: -webkit-box;
  -webkit-line-clamp: 3;
  -webkit-box-orient: vertical;
  overflow: hidden;
  -webkit-animation-delay: 200ms;
          animation-delay: 200ms;
}

@media (max-width: 576px) {
  .upper-hero-grid .hero-details .heading-group .lead {
    -webkit-line-clamp: 3;
  }
}

.upper-hero-grid .hero-details .heading-group a {
  -webkit-animation-delay: 300ms;
          animation-delay: 300ms;
}

.upper-hero-grid .hero-details.transition {
  opacity: 0;
}

.upper-hero-grid .hero-details.transition .heading-group span, .upper-hero-grid .hero-details.transition .heading-group h1, .upper-hero-grid .hero-details.transition .heading-group .lead, .upper-hero-grid .hero-details.transition .heading-group a {
  -webkit-animation: none;
          animation: none;
}

.upper-hero-grid .hero-preview {
  -ms-grid-column: 2;
      grid-column-start: 2;
  grid-column-end: 3;
  -ms-grid-row: 1;
      grid-row-start: 1;
  grid-row-end: 2;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
}

.upper-hero-grid .hero-preview .hero-preview-group {
  position: relative;
  height: 500px;
  width: 100%;
  display: none;
}

.upper-hero-grid .hero-preview .hero-preview-group .preview-circle-wrapper {
  position: absolute;
  width: auto;
}

.upper-hero-grid .hero-preview .hero-preview-group .preview-circle-wrapper .preview-circle {
  position: absolute;
  border-radius: 999px;
}

.upper-hero-grid .hero-preview .hero-preview-group .preview-circle-wrapper .preview-circle .preview-wrapper {
  height: 100%;
  width: 100%;
  border-radius: 999px;
  overflow: hidden;
}

.upper-hero-grid .hero-preview .hero-preview-group .preview-circle-wrapper .preview-circle .preview-wrapper img {
  height: 100%;
  width: 100%;
  -o-object-fit: cover;
     object-fit: cover;
  -o-object-position: center center;
     object-position: center center;
}

.upper-hero-grid .hero-preview .hero-preview-group .preview-circle-wrapper .preview-circle::before {
  position: absolute;
  border-radius: 999px;
  background-position: center center;
  background-size: contain;
  content: ' ';
  z-index: -1;
}

.upper-hero-grid .hero-preview .hero-preview-group .preview-circle-wrapper.main {
  position: absolute;
  z-index: 3;
}

.upper-hero-grid .hero-preview .hero-preview-group .preview-circle-wrapper.main .preview-circle {
  height: 440px;
  width: 440px;
  background-color: #AA0952;
  z-index: 2;
}

.upper-hero-grid .hero-preview .hero-preview-group .preview-circle-wrapper.main .preview-circle::before {
  top: -32px;
  left: -32px;
  width: calc(100% + 64px);
  height: calc(100% + 64px);
  background-image: url("../../assets/images/svg/hero-pattern-1.svg");
}

.upper-hero-grid .hero-preview .hero-preview-group .preview-circle-wrapper.secondary {
  z-index: 1;
}

.upper-hero-grid .hero-preview .hero-preview-group .preview-circle-wrapper.secondary .preview-circle {
  height: 316px;
  width: 316px;
  background-color: #345995;
}

.upper-hero-grid .hero-preview .hero-preview-group .preview-circle-wrapper.secondary .preview-circle::before {
  top: -22px;
  left: -22px;
  width: calc(100% + 44px);
  height: calc(100% + 44px);
  background-image: url("../../assets/images/svg/hero-pattern-2.svg");
}

.upper-hero-grid .hero-preview .hero-preview-group .preview-circle-wrapper.tertiary {
  z-index: 2;
}

.upper-hero-grid .hero-preview .hero-preview-group .preview-circle-wrapper.tertiary .preview-circle {
  height: 220px;
  width: 220px;
  background-color: #0B928E;
}
/* ... */

